--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,10 +1,15 @@
 #spring.devtools.add-properties:false
 
+logging:
+  level:
+    eu.cybershu: DEBUG
+
 auth:
   pocket:
     url:
       request: https://getpocket.com/v3/oauth/request
-      authorize: https://getpocket.com/v3/oauth/authorize
+      authorize_app: https://getpocket.com/auth/authorize
+      access_token: https://getpocket.com/v3/oauth/authorize
       get: https://getpocket.com/v3/get
     consumer-key: ${POCKET_CONSUMER_KEY}
     redirect_uri: http://localhost:8080/pocket/auth/token
