--- a/build.gradle
+++ b/build.gradle
@@ -1,70 +1,18 @@
-plugins {
-    id 'java'
-    id 'org.springframework.boot' version '3.0.1'
-    id 'io.spring.dependency-management' version '1.1.0'
-    id 'groovy'
-}
-
-group = 'eu.cybershu'
-version = '0.1'
-sourceCompatibility = '17'
-
-jar {
-    baseName = 'pocketStats'
-}
-
-repositories {
-    mavenCentral()
-    maven { url 'https://repo.spring.io/milestone' }
-}
-
-ext {
-    set('springShellVersion', "3.0.0-M3")
-    mapstructVersion = "1.5.3.Final"
-    lombokVersion = "1.18.20"
-    lombokMapstructBindingVersion = "0.2.0"
-}
-
-dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'commons-validator:commons-validator:1.7'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    implementation 'com.fasterxml.jackson.core:jackson-databind'
-    implementation 'org.springframework.shell:spring-shell-starter'
-    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
-
-    implementation "org.mapstruct:mapstruct:${mapstructVersion}",
-            "org.projectlombok:lombok:${lombokVersion}"
-    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}",
-            "org.projectlombok:lombok:${lombokVersion}",
-            "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindingVersion}"
-    implementation 'com.google.guava:guava:31.1-jre'
-
-    //	Tests
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+buildscript {
+    ext {
+        springBootVersion = '3.0.1'
     }
-
-    implementation 'org.codehaus.groovy:groovy:3.0.14'
-    implementation 'org.codehaus.groovy:groovy-json:3.0.9'
-    testImplementation('org.spockframework:spock-core:2.3-groovy-3.0')
-    testImplementation('org.spockframework:spock-spring:2.3-groovy-3.0')
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
-    implementation 'cglib:cglib-nodep:3.3.0'
-    testImplementation 'net.bytebuddy:byte-buddy-agent:1.12.20'
-}
-
-dependencyManagement {
-    imports {
-        mavenBom "org.springframework.shell:spring-shell-dependencies:${springShellVersion}"
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
     }
 }
 
-test {
-    useJUnitPlatform()
-}
+allprojects {
+    apply plugin: 'io.spring.dependency-management'
 
-tasks.named('test') {
-    useJUnitPlatform()
+    group = 'eu.cybershu'
+    version = '0.1'
 }
