--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -4,18 +4,15 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.0'
     id 'groovy'
 }
-
-group = 'eu.cybershu'
-version = '0.1'
-sourceCompatibility = '17'
-
-jar {
-    baseName = 'pocketStats'
-}
+apply plugin: 'io.spring.dependency-management'
 
 repositories {
     mavenCentral()
     maven { url 'https://repo.spring.io/milestone' }
+}
+
+jar {
+    baseName = 'pocketStats'
 }
 
 ext {
@@ -24,8 +21,6 @@ ext {
     lombokVersion = "1.18.20"
     lombokMapstructBindingVersion = "0.2.0"
 }
-
-processResources.dependsOn ':frontend:npmBuild'
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
@@ -60,15 +55,6 @@ dependencies {
 dependencyManagement {
     imports {
         mavenBom "org.springframework.shell:spring-shell-dependencies:${springShellVersion}"
-    }
-}
-
-
-sourceSets {
-    main {
-        resources {
-            srcDir '../frontend/build/dist'
-        }
     }
 }
 
