--- a/frontend/build.gradle
+++ b/frontend/build.gradle
@@ -1,48 +1,19 @@
-
-
-buildscript {
-}
-
 plugins {
-    id "com.moowork.node" version "1.2.0"
-    id "com.github.node-gradle.node" version "3.5.1"
+    id 'java'
 }
 
-apply plugin: 'com.moowork.node'
+group 'eu.cybershu'
+version '0.1'
 
-node {
-    // Version of node to use.
-    version = '19.2.0'
-
-    // Version of npm to use.
-    npmVersion = '8.9.13'
-
-    // Base URL for fetching node distributions (change if you have a mirror).
-    distBaseUrl = 'https://nodejs.org/dist'
-
-    // If true, it will download node using above parameters.
-    // If false, it will try to use globally installed node.
-    download = true
-
-    // Set the work directory for unpacking node
-    workDir = file("${project.buildDir}/nodejs")
-
-    // Set the work directory for NPM
-    npmWorkDir = file("${project.buildDir}/npm")
-
-    // Set the work directory where node_modules should be located
-    nodeModulesDir = file("${project.projectDir}")
+repositories {
+    mavenCentral()
 }
 
-task npmBuild(type: NpmTask) {
-    dependsOn 'npmInstall'
-    dependsOn 'clean'
-
-    args = ['run', 'build']
+dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
-task clean() {
-    doFirst {
-        delete 'build/dist'
-    }
+test {
+    useJUnitPlatform()
 }
