Removed CLI from app Asynchronous login to app by UI Refactorings like code formatting

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -16,7 +16,6 @@ jar {
 }
 
 ext {
-    set('springShellVersion', "3.0.0-M3")
     mapstructVersion = "1.5.3.Final"
     lombokVersion = "1.18.20"
     lombokMapstructBindingVersion = "0.2.0"
@@ -30,10 +29,10 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind'
     implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.14.2'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.2'
-    implementation 'org.springframework.shell:spring-shell-starter'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
+    implementation 'org.hibernate:hibernate-validator:8.0.0.Final'
 
     implementation "org.mapstruct:mapstruct:${mapstructVersion}",
             "org.projectlombok:lombok:${lombokVersion}"
@@ -58,7 +57,6 @@ dependencies {
 
 dependencyManagement {
     imports {
-        mavenBom "org.springframework.shell:spring-shell-dependencies:${springShellVersion}"
     }
 }
 
