--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.3.3",
+    "bootstrap": "^5.2.3",
+    "bootstrap-vue-3": "^0.5.1",
     "core-js": "^3.8.3",
     "pinia": "^2.0.32",
-    "vue": "^3.2.13",
+    "vue": "^3.2.47",
     "vue-axios": "^3.5.2",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3",
