--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-vue-3": "^0.5.1",
     "core-js": "^3.8.3",
+    "date-fns": "^2.29.3",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
     "vue-axios": "^3.5.2",
