--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,16 @@
     "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
     "bootstrap-vue-3": "^0.5.1",
+    "chart.js": "^4.0.0",
     "core-js": "^3.8.3",
     "date-fns": "^2.29.3",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
     "vue-axios": "^3.5.2",
+    "vue-chartjs": "^5.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3",
+    "vue3-datepicker": "^0.3.4",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
@@ -53,7 +56,9 @@
     "parserOptions": {
       "parser": "@typescript-eslint/parser"
     },
-    "rules": {}
+    "rules": {
+      "no-unused-vars": "off"
+    }
   },
   "browserslist": [
     "> 1%",
