Display archived and added items on one chart

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "core-js": "^3.8.3",
     "date-fns": "^2.29.3",
     "pinia": "^2.0.32",
+    "rxjs": "^7.8.0",
     "vue": "^3.2.47",
     "vue-axios": "^3.5.2",
     "vue-chartjs": "^5.0.0",
