--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,18 +11,20 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up Java
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3.9.0
       with:
-        java-version: 19
+        distribution: 'temurin'
+        java-version: '17'
+        check-latest: true
 
     - name: Backend tests
       working-directory: backend
       run: ./gradlew test
 
-    - name: Build frontend
-      working-directory: frontend
-      run: npm install && npm run build
-
     - name: Build backend
       working-directory: backend
       run: ./gradlew build
+
+    - name: Build frontend
+      working-directory: frontend
+      run: npm install && npm run build
