--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,15 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+      
+    - name: Official SonarQube Scan
+      # You may pin to the exact commit or the version.
+      # uses: SonarSource/sonarqube-scan-action@a6ba0aafc293e03de5437af7edbc97f7d3ebc91a
+      uses: SonarSource/sonarqube-scan-action@v1.2.0
+      with:
+        # Additional arguments to the sonar-scanner
+        # Set the sonar.projectBaseDir analysis property
+        projectBaseDir: .
 
     - name: Set up Java
       uses: actions/setup-java@v3.9.0
