--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,16 +9,23 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-      
-    - name: Official SonarQube Scan
-      # You may pin to the exact commit or the version.
-      # uses: SonarSource/sonarqube-scan-action@a6ba0aafc293e03de5437af7edbc97f7d3ebc91a
-      uses: SonarSource/sonarqube-scan-action@v1.2.0
+    - name: Cache SonarCloud packages
+      uses: actions/cache@v3
       with:
-        # Additional arguments to the sonar-scanner
-        # Set the sonar.projectBaseDir analysis property
-        projectBaseDir: .
-
+        path: ~/.sonar/cache
+        key: ${{ runner.os }}-sonar
+        restore-keys: ${{ runner.os }}-sonar
+    - name: Cache Gradle packages
+      uses: actions/cache@v3
+      with:
+        path: ~/.gradle/caches
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+        restore-keys: ${{ runner.os }}-gradle
+    - name: Build and analyze
+      env:
+        SONAR_HOST_URL: ${{ env.SONAR_HOST_URL }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      run: ./gradlew build sonarqube --info
     - name: Set up Java
       uses: actions/setup-java@v3.9.0
       with:
