--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,9 @@ jobs:
         working-directory: backend
         run: ../gradlew test
   build:
-    needs: static-analysis
+    needs: 
+      - static-analysis
+      - tests
     runs-on: ubuntu-latest
 
     steps:
