--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -3,8 +3,11 @@ plugins {
     id 'org.springframework.boot' version '3.0.1'
     id 'io.spring.dependency-management' version '1.1.0'
     id 'groovy'
+    id 'jacoco'
 }
+
 apply plugin: 'io.spring.dependency-management'
+apply plugin: "jacoco"
 
 repositories {
     mavenCentral()
