--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,10 @@ buildscript {
 plugins {
     id "org.sonarqube" version "3.5.0.2730"
     id "jacoco"
+    id "java"
 }
 
+apply plugin: "java"
 apply plugin: "jacoco"
 
 allprojects {
@@ -22,8 +24,8 @@ allprojects {
 
 jacocoTestReport {
     reports {
-        xml.enabled true
-        csv.enabled true
-        html.destination "${buildDir}/jacocoHtml"
+        xml.required = false
+        csv.required = false
+        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
     }
 }
