--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,19 +3,19 @@ name: PocketStats CI
 on: [push, pull_request]
 
 jobs:
-  static-analysis:
-   runs-on: ubuntu-latest
-   name: "SonarScan analysis"
+#   static-analysis:
+#    runs-on: ubuntu-latest
+#    name: "SonarScan analysis"
 
-   steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Set up Java
-      uses: actions/setup-java@v3.9.0
-      with:
-        distribution: 'temurin'
-        java-version: '17'
-        check-latest: true
+#    steps:
+#     - name: Checkout code
+#       uses: actions/checkout@v2
+#     - name: Set up Java
+#       uses: actions/setup-java@v3.9.0
+#       with:
+#         distribution: 'temurin'
+#         java-version: '17'
+#         check-latest: true
 #     - name: Analyze with SonarCloud
 #       uses: sonarsource/sonarcloud-github-action@master
 #       env:
@@ -26,17 +26,17 @@ jobs:
 #           -Dsonar.projectKey=michmzr_PocketStats
 #           -Dsonar.host.url=https://sonarcloud.io
 #           -Dsonar.verbose=true
-    - name: Cache Gradle packages
-      uses: actions/cache@v1
-      with:
-        path: ~/.gradle/caches
-        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
-        restore-keys: ${{ runner.os }}-gradle
-    - name: Build and analyze
-      run: ./gradlew build jacocoTestReport sonar --info   -Dsonar.organization=michmzr  -Dsonar.projectKey=michmzr_PocketStats  -Dsonar.host.url=https://sonarcloud.io  -Dsonar.verbose=true
-      env:
-        # SonarCloud access token should be generated from https://sonarcloud.io/account/security/
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#     - name: Cache Gradle packages
+#       uses: actions/cache@v1
+#       with:
+#         path: ~/.gradle/caches
+#         key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+#         restore-keys: ${{ runner.os }}-gradle
+#     - name: Build and analyze
+#       run: ./gradlew build jacocoTestReport sonar --info   -Dsonar.organization=michmzr  -Dsonar.projectKey=michmzr_PocketStats  -Dsonar.host.url=https://sonarcloud.io  -Dsonar.verbose=true
+#       env:
+#         # SonarCloud access token should be generated from https://sonarcloud.io/account/security/
+#         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
        
   tests:
     runs-on: ubuntu-latest
