--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,24 @@ buildscript {
     }
 }
 
+plugins {
+    id "org.sonarqube" version "3.5.0.2730"
+    id "jacoco"
+    id "java"
+}
+
+apply plugin: "java"
+apply plugin: "jacoco"
+
 allprojects {
     group = 'eu.cybershu'
-    version = '2.0'
+    version = '2.1'
+}
+
+jacocoTestReport {
+    reports {
+        xml.required = false
+        csv.required = false
+        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+    }
 }
