--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,3 +73,12 @@ jobs:
       - name: Build frontend
         working-directory: frontend
         run: npm install && npm run build
+      - name: Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v0.3.0
+        with:
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          export_default_credentials: true
+      - name: Deploy to Google Cloud App Engine
+        run: |
+          gcloud app deploy --quiet --project ${{ secrets.GCP_PROJECT_ID }} build/libs/*.jar
