--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,9 +70,9 @@ jobs:
       - name: Build backend
         working-directory: backend
         run: ../gradlew build
-      - name: Build frontend
-        working-directory: frontend
-        run: npm install && npm run build
+      #      - name: Build frontend
+      #        working-directory: frontend
+      #        run: npm install && npm run build
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v0.3.0
         with:
