--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,19 +66,20 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '17'
-          check-latest: true
+          check-latest: false #todo set true
       - name: Build backend
         working-directory: backend
         run: ../gradlew build
       #      - name: Build frontend
       #        working-directory: frontend
       #        run: npm install && npm run build
-      - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v0.3.0
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v1'
         with:
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-          export_default_credentials: true
+          service_account: 'github-deploy@pocketstats-383108.iam.gserviceaccount.com'
+          credentials_json: '${{ secrets.GCP_SA_KEY }}'
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v1'
       - name: Deploy to Google Cloud App Engine
         run: |
           gcloud app deploy --quiet --project ${{ secrets.GCP_PROJECT_ID }} build/libs/*.jar
