--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,13 +49,13 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
           check-latest: true
-  
+
       - name: Backend tests
         working-directory: backend
         run: ../gradlew test
   build:
-    needs: 
-      - tests
+    #    needs:
+    #      - tests
     runs-on: ubuntu-latest
 
     steps:
