--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
        
   tests:
     runs-on: ubuntu-latest
+    environment: master
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -57,7 +58,7 @@ jobs:
     #    needs:
     #      - tests
     runs-on: ubuntu-latest
-
+    environment: master
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
