--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,7 +70,7 @@ jobs:
           check-latest: false #todo set true
       - name: Build backend
         working-directory: backend
-        run: ../gradlew build
+        run: ../gradlew build --debug
       #      - name: Build frontend
       #        working-directory: frontend
       #        run: npm install && npm run build
@@ -82,4 +82,4 @@ jobs:
         uses: 'google-github-actions/setup-gcloud@v1'
       - name: Deploy to Google Cloud App Engine
         run: |
-          gcloud app deploy --quiet --project ${{ secrets.GCP_PROJECT_ID }} build/libs/*.jar
+          gcloud app deploy --quiet --project ${{ secrets.GCP_PROJECT_ID }} ./build/libs/*.jar
