Set jar main class

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -71,3 +71,9 @@ test {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+tasks.jar {
+    manifest {
+        attributes["Main-Class"] = "eu.cybershu.pocketstats.PocketStatsApplication"
+    }
+}
