Set jar main class v4

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -72,6 +72,12 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
+jar {
+    manifest {
+        attributes 'Main-Class': 'eu.cybershu.pocketstats.PocketStatsApplication'
+    }
+}
+
 bootJar {
     manifest {
         attributes 'Main-Class': 'eu.cybershu.pocketstats.PocketStatsApplication'
