--- a/build.gradle
+++ b/build.gradle
@@ -29,3 +29,9 @@ jacocoTestReport {
         html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
     }
 }
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'eu.cybershu.pocketstats.PocketStatsApplication'
+    }
+}
