--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,7 +70,7 @@ jobs:
           check-latest: false #todo set true
       - uses: gradle/gradle-build-action@v2.4.0
         with:
-           arguments: build
+           arguments: build -x test
 #       - name: Build backend
 #         working-directory: backend
 #         run: ../gradlew build --debug
