--- a/app.yaml
+++ b/app.yaml
@@ -2,6 +2,7 @@ runtime: java17
 
 instance_class: F1
 service: backend
+service_account: pocketstats-383108@appspot.gserviceaccount.com
 
 env_variables:
   BUCKET_NAME: "ps-backend"
