--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,7 +83,11 @@ jobs:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v1'
-      - name: Deploy to Google Cloud App Engine
-        run: |
-          gcloud app deploy --quiet --project ${{ secrets.GCP_PROJECT_ID }} ./build/libs/*.jar  --log-http --verbosity=debug
+      - id: 'deploy'
+        uses: 'google-github-actions/deploy-appengine@v1'
+      - id: 'test'
+        run: 'curl "${{ steps.deploy.outputs.url }}"'
+     # - name: Deploy to Google Cloud App Engine
+        #run: |
+         # gcloud app deploy --quiet --project ${{ secrets.GCP_PROJECT_ID }} ./build/libs/*.jar  --log-http --verbosity=debug
    
