--- a/.gitignore
+++ b/.gitignore
@@ -154,8 +154,9 @@ gradle-app.setting
 !/gradle/
 
 #ENV
-env_dev.json
+/env_dev.json
+/env_master.json
 /pocket-creds.json
 
 # Frontend
-./frontend/node_modules
+./frontend/node_modules!/env_master.json
