--- a/app.yaml
+++ b/app.yaml
@@ -4,6 +4,8 @@ instance_class: F1
 service: backend
 service_account: pocketstats-383108@appspot.gserviceaccount.com
 
+entrypoint: 'java -jar ./backend/build/libs/backend.jar'
+
 env_variables:
   BUCKET_NAME: "ps-backend"
 
