--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,36 +68,30 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
           check-latest: false #todo set true
-      - uses: gradle/gradle-build-action@v2.4.0
+      - name: Build backend
+        uses: gradle/gradle-build-action@v2.4.0
+        working-directory: backend
         with:
-           gradle-version: current
-           arguments: shadowJar -x test
-#       - name: Build backend
-#         working-directory: backend
-#         run: ../gradlew build --debug
-      #      - name: Build frontend
-      #        working-directory: frontend
-      #        run: npm install && npm run build
+          gradle-version: current
+          arguments: shadowJar -x test
       - id: 'auth'
         uses: 'google-github-actions/auth@v1'
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v1'
-      - id: 'deploy'
-        uses: 'google-github-actions/deploy-appengine@v1'
+      - name: 'Deploy backend to App Engine'
+        uses: google-github-actions/deploy-appengine@v1
         with:
-          deliverables: app.yaml
+          deliverables: ./backend/app.yaml
           env_vars: |-
             POCKET_CONSUMER_KEY=${{secrets.POCKET_CONSUMER_KEY}}
             MONGODB_DB=${{vars.MONGODB_DB}}
             MONGODB_URI=${{secrets.MONGODB_URI}}
-      - id: 'test'
-        run: 'curl "${{ steps.deploy.outputs.url }}"'
-      - uses: actions/upload-artifact@v3
+      #      - name: Test backend deployment
+      #        run: 'curl "${{ steps.deploy.outputs.url }}"'
+      - name: Upload backend JAR artifact
+        uses: actions/upload-artifact@v3
         with:
-           name: backend.jar
-           path: ./backend/build/libs/backend.jar
-#      - name: Deploy to Google Cloud App Engine
-#        run: |
-#          gcloud app deploy --quiet --project ${{ secrets.GCP_PROJECT_ID }} ./backend/build/libs/*.jar  --log-http --verbosity=debug
+          name: backend.jar
+          path: ./backend/build/libs/backend.jar
