--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,7 +67,7 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '17'
-          check-latest: false #todo set true
+          check-latest: false
       - name: Build backend
         uses: gradle/gradle-build-action@v2.4.0
         with:
@@ -84,14 +84,15 @@ jobs:
         uses: google-github-actions/deploy-appengine@v1
         with:
           deliverables: ./backend/app.yaml
+          flags: "--promote"
           env_vars: |-
             POCKET_CONSUMER_KEY=${{secrets.POCKET_CONSUMER_KEY}}
             MONGODB_DB=${{vars.MONGODB_DB}}
             MONGODB_URI=${{secrets.MONGODB_URI}}
-      #      - name: Test backend deployment
-      #        run: 'curl "${{ steps.deploy.outputs.url }}"'
+      - name: Test backend deployment
+        run: 'curl "${{ steps.deploy.outputs.url }}"'
       - name: Upload backend JAR artifact
         uses: actions/upload-artifact@v3
         with:
           name: backend.jar
-          path: ./backend/build/libs/backend.jar
+          path: ./build/libs/backend.jar
