--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,7 +73,15 @@ jobs:
         with:
           gradle-version: current
           build-root-directory: backend
-          arguments: shadowJar -x test
+          arguments: shadowJar -x test --debug
+      - name: Command Output
+        uses: mathiasvr/command-output@v2.0.0 
+        with:
+           run: pwd
+      - name: Command Output
+        uses: mathiasvr/command-output@v2.0.0 
+        with:
+           run: ls -la ./build/libs
       - id: 'auth'
         uses: 'google-github-actions/auth@v1'
         with:
