--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -1,6 +1,6 @@
-buildscript {      // Configuration for building
+buildscript {
     repositories {
-        jcenter()      // Bintray's repository - a fast Maven Central mirror & more
+        jcenter()
         mavenCentral()
     }
     dependencies {
@@ -21,10 +21,10 @@ plugins {
 apply plugin: "jacoco"
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'com.github.johnrengelman.shadow'
-apply plugin: 'org.akhikhl.gretty'
 apply plugin: 'com.google.cloud.tools.appengine'
 
 repositories {
+
     mavenCentral()
     maven { url 'https://repo.spring.io/milestone' }
 }
@@ -36,9 +36,6 @@ ext {
 }
 
 dependencies {
-    providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
-    providedCompile 'com.google.appengine:appengine:+'
-
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'commons-validator:commons-validator:1.7'
