--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,35 +75,35 @@ jobs:
           build-root-directory: backend
           arguments: jar -x test --debug
       - name: pwd
-        uses: mathiasvr/command-output@v2.0.0 
+        uses: mathiasvr/command-output@v2.0.0
         with:
-           run: pwd
+          run: pwd
       - name: ls
-        uses: mathiasvr/command-output@v2.0.0 
+        uses: mathiasvr/command-output@v2.0.0
         with:
-           run: ls -la
+          run: ls -la
       - name: ls backend build libs
-        uses: mathiasvr/command-output@v2.0.0 
+        uses: mathiasvr/command-output@v2.0.0
         with:
-           run: ls -la ./backend/build/libs
-      - id: 'auth'
-        uses: 'google-github-actions/auth@v1'
+          run: ls -la ./backend/build/libs
+      #      - id: 'auth'
+      #        uses: 'google-github-actions/auth@v1'
+      #        with:
+      #          credentials_json: ${{ secrets.GCP_SA_KEY }}
+      #      - name: 'Set up Cloud SDK'
+      #        uses: 'google-github-actions/setup-gcloud@v1'
+      #      - name: 'Deploy backend to App Engine'
+      #        uses: 'google-github-actions/deploy-appengine@v1'
+      #        with:
+      #          working_directory: ./backend
+      #          deliverables: build.gradle
+      #          flags: "--promote"
+      #          env_vars: |-
+      #            POCKET_CONSUMER_KEY=${{secrets.POCKET_CONSUMER_KEY}}
+      #            MONGODB_DB=${{vars.MONGODB_DB}}
+      #            MONGODB_URI=${{secrets.MONGODB_URI}}
+      - name: Upload backend JAR artifact
+        uses: actions/upload-artifact@v3
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
-      - name: 'Set up Cloud SDK'
-        uses: 'google-github-actions/setup-gcloud@v1'
-      - name: 'Deploy backend to App Engine'
-        uses: 'google-github-actions/deploy-appengine@v1'
-        with:
-          working_directory: ./backend
-          deliverables: build.gradle
-          flags: "--promote"
-          env_vars: |-
-            POCKET_CONSUMER_KEY=${{secrets.POCKET_CONSUMER_KEY}}
-            MONGODB_DB=${{vars.MONGODB_DB}}
-            MONGODB_URI=${{secrets.MONGODB_URI}}
-#       - name: Upload backend JAR artifact
-#         uses: actions/upload-artifact@v3
-#         with:
-#           name: backend.jar
-#           path: ./backend/build/libs/backend.jar
+          name: backend.jar
+          path: ./backend/build/libs/backend.jar
