--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,6 @@ jobs:
           gradle-version: current
           arguments: build jacocoTestReport sonar --info   -Dsonar.organization=michmzr  -Dsonar.projectKey=michmzr_PocketStats  -Dsonar.host.url=https://sonarcloud.io  -Dsonar.verbose=true
         env:
-          # SonarCloud access token should be generated from https://sonarcloud.io/account/security/
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
   build:
     #    needs:
@@ -48,3 +47,14 @@ jobs:
         with:
           name: app.jar
           path: ./build/libs/app.jar
+      - name: Deploy to Heroku
+        # You may pin to the exact commit or the version.
+        # uses: AkhileshNS/heroku-deploy@5ef17ff17a3fb8e9ad822ae6a61648a3ef9e0c3d
+        uses: AkhileshNS/heroku-deploy@v3.12.13
+        with:
+          # This will be used for authentication. You can find it in your heroku homepage account settings
+          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+          # Email that you use with heroku
+          heroku_email: michmzr@gmail.com
+          # The appname to use for deploying/updating
+          heroku_app_name: getpocket-stats
