--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,9 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
           check-latest: true
-
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
       - name: Build backend and analyse
         uses: gradle/gradle-build-action@v2.4.0
         with:
@@ -37,11 +39,14 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
           check-latest: false
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
       - name: Build backend
         uses: gradle/gradle-build-action@v2.4.0
         with:
           gradle-version: current
-          arguments: build -x test --debug
+          arguments: build -x test
       - name: Upload backend JAR artifact
         uses: actions/upload-artifact@v3
         with:
