--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,10 +57,12 @@ jobs:
         # uses: AkhileshNS/heroku-deploy@5ef17ff17a3fb8e9ad822ae6a61648a3ef9e0c3d
         uses: AkhileshNS/heroku-deploy@v3.12.13
         with:
-          # This will be used for authentication. You can find it in your heroku homepage account settings
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          # Email that you use with heroku
           heroku_email: michmzr@gmail.com
-          # The appname to use for deploying/updating
           heroku_app_name: getpocket-stats
           dontuseforce: 0
+          remote_branch: "main"
+        env:
+          HD_MONGODB_DB: test
+          HD_MONGODB_URI: ${{ secrets.MONGODB_URI }}
+          HD_POCKET_CONSUMER_KEY: ${{ secrets.POCKET_CONSUMER_KEY }}
