--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,7 +12,7 @@ auth:
       access_token: https://getpocket.com/v3/oauth/authorize
       get: https://getpocket.com/v3/get
     consumer-key: ${POCKET_CONSUMER_KEY}
-    redirect_uri: http://localhost:8080/pocket/auth/token
+    redirect_uri: ${BACKEND_URL:http://localhost:8081}/pocket/auth/token
 
 management:
   endpoints:
@@ -20,7 +20,7 @@ management:
       exposure:
         include: [ 'configprops', 'mappings', 'health', 'info', 'logfile', 'loggers', 'endpoints' ]
 server:
-  port: ${PORT:81}
+  port: ${PORT:8081}
   error:
     include-binding-errors: always
 
