Changed prod config v2

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -25,6 +25,8 @@ server:
     include-binding-errors: always
 
 spring:
+  server:
+    port: ${PORT:8081}
   jackson:
     serialization:
       WRITE_DATES_AS_TIMESTAMPS: false
