Changed prod config v3

--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -1,3 +1,9 @@
 auth:
   pocket:
     redirect_uri: ${BACKEND_URL:https://getpocket-stats.herokuapp.com}/pocket/auth/token
+
+spring:
+  server:
+    port: ${PORT:8081}
+    servlet:
+      context-path: /pocketstats
