--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -27,6 +27,8 @@ server:
 spring:
   server:
     port: ${PORT:8081}
+    servlet:
+      context-path: /pocketstats
   jackson:
     serialization:
       WRITE_DATES_AS_TIMESTAMPS: false
