--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -25,6 +25,10 @@ server:
     include-binding-errors: always
 
 spring:
+  server:
+    port: ${PORT:8081}
+    servlet:
+      context-path: /pocketstats
   jackson:
     serialization:
       WRITE_DATES_AS_TIMESTAMPS: false
